@@ -886,6 +886,16 @@ class Branch(object):
         revno, info = self.get_revision_info(revision)
         return info
 
+
+    def revision_id_to_revno(self, revision_id):
+        """Given a revision id, return its revno"""
+        history = self.revision_history()
+        try:
+            return history.index(revision_id) + 1
+        except ValueError:
+            raise bzrlib.errors.NoSuchRevision(self, revision_id)
+
+
     def get_revision_info(self, revision):
         """Return (revno, revision id) for revision identifier.
 
